--- a/index.html
+++ b/index.html
@@ -6,58 +6,83 @@
     <title>Buscador en Tiempo Real</title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body class="flex justify-center items-center bg-radial from-sky-900 to-black to-100% p-6 font-sans text-black min-h-screen">
-  <div class="shadow-2xl/80 shadow-black rounded-lg bg-gray-100 p-10 flex justify-center items-center">
+<body class="flex justify-center items-center bg-radial from-sky-900 to-black to-100% p-8 font-sans text-black min-h-screen">
+  <div class="shadow-2xl/80 shadow-black rounded-lg bg-gray-100 p-10 flex flex-col justify-center items-start gap-4 min-w-full min-h-full">
+    <h1 class="text-3xl font-bold mb-6 text-center text-gray-800">Buscador en Tiempo Real</h1>
+    <div>
+      <input type="text" class="border border-gray-800 p-2 rounded-lg w-full" placeholder="Buscar..." id="buscador" oninput="filterTable()">
+    </div>
     <table class="table-auto w-full text-left border-collapse  ">
         <thead>
-            <tr>
+            <tr class="tr">
                 <th class="border border-gray-300 p-3 text-left bg-gray-500">Nombre</th>
                 <th class="border border-gray-300 p-3 text-left bg-gray-500">Teléfono</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td class="border border-gray-300 p-3 text-left">Juan Pérez</td>
-                <td class="border border-gray-300 p-3 text-left">+1234567890</td>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Juan Pérez</td>
+                <td class="td border border-gray-300 p-3 text-left">+1234567890</td>
             </tr>
-            <tr>
-                <td class="border border-gray-300 p-3 text-left">María López</td>
-                <td class="border border-gray-300 p-3 text-left">+9876543210</td>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">María López</td>
+                <td class="td border border-gray-300 p-3 text-left">+9876543210</td>
             </tr>
-            <tr>
-                <td class="border border-gray-300 p-3 text-left">Carlos Sánchez</td>
-                <td class="border border-gray-300 p-3 text-left">+5551234567</td>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Carlos Sánchez</td>
+                <td class="td border border-gray-300 p-3 text-left">+5551234567</td>
             </tr>
-            <tr>
-                <td class="border border-gray-300 p-3 text-left">Ana Martínez</td>
-                <td class="border border-gray-300 p-3 text-left">+4449876543</td>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Ana Martínez</td>
+                <td class="td border border-gray-300 p-3 text-left">+4449876543</td>
             </tr>
-            <tr>
-                <td class="border border-gray-300 p-3 text-left">Luis García</td>
-                <td class="border border-gray-300 p-3 text-left">+3336667777</td>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Luis García</td>
+                <td class="td border border-gray-300 p-3 text-left">+3336667777</td>
             </tr>
-            <tr>
-                <td class="border border-gray-300 p-3 text-left">Laura Fernández</td>
-                <td class="border border-gray-300 p-3 text-left">+2228889999</td>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Laura Fernández</td>
+                <td class="td border border-gray-300 p-3 text-left">+2228889999</td>
             </tr>
-            <tr>
-                <td class="border border-gray-300 p-3 text-left">Pedro Ramírez</td>
-                <td class="border border-gray-300 p-3 text-left">+1115554444</td>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Pedro Ramírez</td>
+                <td class="td border border-gray-300 p-3 text-left">+1115554444</td>
             </tr>
-            <tr>
-                <td class="border border-gray-300 p-3 text-left">Sofía Gómez</td>
-                <td class="border border-gray-300 p-3 text-left">+9993332222</td>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Sofía Gómez</td>
+                <td class="td border border-gray-300 p-3 text-left">+9993332222</td>
             </tr>
-            <tr>
-                <td class="border border-gray-300 p-3 text-left">Jorge Díaz</td>
-                <td class="border border-gray-300 p-3 text-left">+7771110000</td>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Jorge Díaz</td>
+                <td class="td border border-gray-300 p-3 text-left">+7771110000</td>
             </tr>
-            <tr>
-                <td class="border border-gray-300 p-3 text-left">Elena Álvarez</td>
-                <td class="border border-gray-300 p-3 text-left">+6662221111</td>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Elena Álvarez</td>
+                <td class="td border border-gray-300 p-3 text-left">+6662221111</td>
+            </tr>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Andrés Torres</td>
+                <td class="td border border-gray-300 p-3 text-left">+5554443333</td>
+            </tr>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Clara Morales</td>
+                <td class="td border border-gray-300 p-3 text-left">+4447776666</td>
+            </tr>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Ricardo Herrera</td>
+                <td class="td border border-gray-300 p-3 text-left">+3338885555</td>
+            </tr>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Patricia Castro</td>
+                <td class="td border border-gray-300 p-3 text-left">+2229994444</td>
+            </tr>
+            <tr class="tr">
+                <td class="td border border-gray-300 p-3 text-left">Fernando Ruiz</td>
+                <td class="td border border-gray-300 p-3 text-left">+1116668888</td>
             </tr>
         </tbody>
     </table>
   </div>
+  <script src="search.js"></script>
 </body>
 </html>
